--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="my-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a href="inicio.html" class="nav-link">Inicio</a>
+                        <a href="Index.html" class="nav-link">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a href="./gastronomia/gastro.html" class="nav-link">Gastronomía</a>
