--- a/gastronomia/gastro.html
+++ b/gastronomia/gastro.html
@@ -9,7 +9,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="../inicio.html">
+    <link rel="stylesheet" href="../Index.html">
+
+    <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script>
+
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap" rel="stylesheet" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;800&display=swap" rel="stylesheet">
+
+
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet" />
 
 
 
@@ -34,7 +44,7 @@
             <div class="collapse navbar-collapse" id="my-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a href="../inicio.html" class="nav-link">Inicio</a>
+                        <a href="../Index.html" class="nav-link">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a href="../gastronomia/gastro.html" class="nav-link">Gastronomía</a>
@@ -114,7 +124,7 @@
                     <h2>LA PROVINCIA </h2>
 
                 </div>
-                <a href="./restaurantes/porvidencia.html" >
+                <a href="./porvidencia.html" >
                     <img alt="imagen html de ejemplo" src="./imagenes/PROVINCIA.jpg" width="460px" alt="jobs" class="img-fluid" />
                 </a>
             </div>
