--- a/Index.html
+++ b/Index.html
@@ -163,9 +163,7 @@
                         <div class="col-lg-5 mr-auto align-self-center order-lg-1">
                             <h2 class="text-blank">Sitios Turísticos</h2>
                             <p class="mb-4">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quia totam expedita earum
-                                dolor, explicabo quo sequi necessitatibus quas voluptates. Quia hic corporis enim,
-                                incidunt beatae quidem laborum corrupti. Eligendi?
+                                Venga visite cota - cundinamarca es un municipio hermoso rodeado de naturaleza!!!! podra tener grandes experiencias y aprender mucho de ellas
                             </p>
                             <a href="#" class="btn btn-about">Leer más</a>
                         </div>
@@ -186,9 +184,7 @@
                         <div class="col-lg-5 mr-auto align-self-center order-lg-2">
                             <h2 class="text-blank">Restaurantes</h2>
                             <p class="mb-4">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quia totam expedita earum
-                                dolor, explicabo quo sequi necessitatibus quas voluptates. Quia hic corporis enim,
-                                incidunt beatae quidem laborum corrupti. Eligendi?
+                                Este municipio, que algunos capitalinos acostumbran visitar los fines de semana con la ilusión de encontrar una suculenta picada, más allá de su oferta gastronómica cuenta con mayores atractivos turísticos.
                             </p>
                             <a href="#" class="btn btn-about">Leer más</a>
                         </div>
